Примечание про создание нового файла с программой

--- a/main.adoc
+++ b/main.adoc
@@ -624,6 +624,10 @@ $ git clone https://gitlab.com/sibragimov/riscv-lab.git
 дизассемблерный листинг. Сравнить дизассемблерный листинг с тем, который приведен в примере.
 . Создать новый файл, содержащий текст программы по индивидуальному варианту. Поместить его
 в каталог `src`. Текст программы сохранить в файле с расширением `.s`.
++
+IMPORTANT: При выполнении данного пункта не изменяйте файл `test.s`, но поместите
+текст программы по индивидуальному варианту в новый файл с другим именем.
+
 . Изучить текст программы по индивидуальному варианту. Поместить в отчете псевдокод,
 соответствующий данной программе.
 . Анализируя исходный текст программы, ответьте на вопрос: какое значение должно
