--- a/main.adoc
+++ b/main.adoc
@@ -1449,7 +1449,7 @@ image::img/pipeline.svg[]
 . Заполнить трассу выполнения оптимизированной программы.
 . Сравнить трассы выполнения неоптимизированной и оптимизированной версии, сделать выводы.
 
-.Содержимое отчета
+== Требования к содержанию отчета
 . Титульный лист
 . Цели работы, основные теоретические сведения
 . Исходный текст исследуемой программы, дизассемблерный листинг, псевдокод,
@@ -1463,7 +1463,7 @@ image::img/pipeline.svg[]
 . Трассу работы оптимизированной программы (поместить в отчет и приложить к отчету в виде приложения).
 . Выводы.
 
-=== Индивидуальные варианты
+== Индивидуальные варианты
 .Вариант  1
 ....
         .section .text
