--- a/main.adoc
+++ b/main.adoc
@@ -163,7 +163,7 @@ cmd rd, rs1, imm12
 ....
 или
 ....
-cmd rd, rs1, imm12
+cmd rd, rs1, imm5
 ....
 
 Где:
@@ -518,7 +518,7 @@ _x:     .4byte 0x1 <14>
 это специальный символ, обозначающий точку входа в программу.
 <3> -- Объявление констант.
 <4> -- Метка.
-<5> -- Арифметические выражения, использующие константы могут использоваться в командах
+<5> -- Арифметические выражения над константами могут использоваться в командах
 на месте непосредственного операнда.
 <6> -- Загрузка в  `x1` адреса символа `_x` (то есть, начала массива).
 <7> -- Загрузка в `x2` числа по адресу, содержащемуся в `x1` по смещению `0`.
@@ -1760,7 +1760,7 @@ _x:     .4byte 0x1
         .section .text
         .globl _start;
         len = 8 #Размер массива
-        enroll = 2 #Количество обрабатываемых элементов за одну итерацию
+        enroll = 4 #Количество обрабатываемых элементов за одну итерацию
 	elem_sz = 4 #Размер одного элемента массива
 
 _start:
