Пояснения в трассу выполнения

--- a/main.adoc
+++ b/main.adoc
@@ -1379,6 +1379,21 @@ DX   :: Такт, в котором выборка команды происхо
 .Пример выполнения команды безусловного перехода в случае правильного предсказания ветвления
 image::img/branch_predict.png[]
 
+Где:
+[horizontal]
+F :: Такт, в котором происходит операция выборки;
+ID :: Такт, в котором происходит операция диспетчеризации;
+D  :: Такт, в котором происходит операция декодирования;
+С  :: Такт, в котором команда не выполняется из-за конфликта;
+W   :: Такт, в котором не происходит декодирования команды из-за загрузки блока декодирования;
+X   :: Такт, в котором происходит сброс команд, находящихся в очереди;
+DX   :: Такт, в котором декодирование команды происходит, но его результаты отбрасываются;
+DX   :: Такт, в котором выборка команды происходит, но его результаты отбрасываются;
+M1, M2, M3   :: Первый, второй и третий такты, в которых происходит выполнение команды доступа к памяти;
+AL   :: Такт, в котором происходит выполнение команды АЛУ;
+B    :: Такт, в котором происходит выполнение команды ветвления.
+
+
 Из диаграммы видно, что в такте 37 `pc=0x80000038`. В этом такте формируется сигнал `use_prediction`,
 указывающий, что сигнал `predicted_pc` содержит значение вероятного адреса следующей команды, а именно
 `0x8000000c`. Именно этот адрес записывается в сигнал `next_pc`, а в следующем такте -- в `pc`.
