Ссылка на индивидуальные варианты.

--- a/main.adoc
+++ b/main.adoc
@@ -622,7 +622,7 @@ $ git clone https://gitlab.com/sibragimov/riscv-lab.git
 . Выполнить сборку, запустив команду `gmake`. Убедиться, что был создан файл `test.hex`,
 содержащий шестнадцатеричное представление программы, а в окне терминала отобразился
 дизассемблерный листинг. Сравнить дизассемблерный листинг с тем, который приведен в примере.
-. Создать новый файл, содержащий текст программы по индивидуальному варианту. Поместить его
+. Создать новый файл, содержащий текст программы по индивидуальному варианту (см. <<variants>>). Поместить его
 в каталог `src`. Текст программы сохранить в файле с расширением `.s`.
 +
 IMPORTANT: При выполнении данного пункта не изменяйте файл `test.s`, но поместите
@@ -1480,7 +1480,7 @@ B    :: Такт, в котором происходит выполнение к
 . Трассу работы оптимизированной программы (поместить в отчет и приложить к отчету в виде приложения).
 . Выводы.
 
-== Индивидуальные варианты
+== Индивидуальные варианты [[variants]]
 .Вариант  1
 ....
         .section .text
