--- a/main.adoc
+++ b/main.adoc
@@ -1492,6 +1492,7 @@ B    :: Такт, в котором происходит выполнение к
 _start:
         addi x20, x0, len/enroll
         la x1, _x
+	add x31, x0, x0
 lp:
         lw x2, 0(x1)
         add x31, x31, x2 #!
@@ -1523,6 +1524,7 @@ _x:     .4byte 0x1
 _start:
         addi x20, x0, len/enroll
         la x1, _x
+	add x31, x0, x0
 lp:
         lw x2, 0(x1)
         addi x1, x1, elem_sz*enroll
@@ -1554,6 +1556,7 @@ _x:     .4byte 0x1
 _start:
         la x1, _x
         addi x20, x1, elem_sz*(len-1) #Адрес последнего элемента
+	add x31, x0, x0
 lp:
         lw x2, 0(x1)
         add x31, x31, x2 #!
@@ -1584,6 +1587,7 @@ _x:     .4byte 0x1
 _start:
         la x1, _x
         addi x20, x1, elem_sz*(len-1) #Адрес последнего элемента
+	add x31, x0, x0
 lp:
         lw x2, 0(x1)
         addi x1, x1, elem_sz*enroll #!
@@ -1614,6 +1618,7 @@ _x:     .4byte 0x1
 _start:
         addi x20, x0, len/enroll
         la x1, _x
+	add x31, x0, x0
 lp:
         lw x2, 0(x1)
         add x31, x31, x2
@@ -1647,6 +1652,7 @@ _x:     .4byte 0x1
 _start:
         addi x20, x0, len/enroll
         la x1, _x
+	add x31, x0, x0
 lp:
         lw x2, 0(x1)
         lw x3, 4(x1) #!
@@ -1680,6 +1686,7 @@ _x:     .4byte 0x1
 _start:
         la x1, _x
         addi x20, x1, elem_sz*len #Адрес последнего элемента
+	add x31, x0, x0
 lp:
         lw x2, 0(x1)
         add x31, x31, x2 #!
@@ -1712,6 +1719,7 @@ _x:     .4byte 0x1
 _start:
         la x1, _x
         addi x20, x1, elem_sz*len #Адрес последнего элемента
+	add x31, x0, x0
 lp:
         lw x2, 0(x1)
         lw x3, 4(x1)
@@ -1744,6 +1752,7 @@ _x:     .4byte 0x1
 _start:
         addi x20, x0, len/enroll
         la x1, _x
+	add x31, x0, x0
 lp:
         lw x2, 0(x1)
         add x31, x31, x2 #!
@@ -1781,6 +1790,7 @@ _x:     .4byte 0x1
 _start:
         addi x20, x0, len/enroll
         la x1, _x
+	add x31, x0, x0
 lp:
         lw x2, 0(x1)
         lw x3, 4(x1) #!
@@ -1818,6 +1828,7 @@ _x:     .4byte 0x1
 _start:
         la x1, _x
         addi x20, x1, elem_sz*len #Адрес последнего элемента
+	add x31, x0, x0
 lp:
         lw x2, 0(x1)
         add x31, x31, x2 #!
@@ -1854,6 +1865,7 @@ _x:     .4byte 0x1
 _start:
         la x1, _x
         addi x20, x1, elem_sz*len #Адрес последнего элемента
+	add x31, x0, x0
 lp:
         lw x2, 0(x1)
         lw x3, 4(x1)
