Отказ от использования терминального сервера.

--- a/main.adoc
+++ b/main.adoc
@@ -28,45 +28,6 @@ Taiga (https://gitlab.com/sfu-rcl/Taiga, авторы - Eric Matthews,  Lesley S
 моделирования работы исследуемого микропроцессора в процессе выполнения программы и
 наблюдения формы внутренних сигналов.
 
-Для работы с проектом используется САПР Intel Quartus.
-
-=== Подготовка рабочего окружения
-Для выполнения лабораторной работы предлагается использовать терминальный сервер,
-доступный из МГТУ им. Н. Э. Баумана, на котором установлено и настроено все требуемое ПО.
-
-IMPORTANT: В случае использования терминального сервера не требуется ничего устанавливать
-на ПК, с которого осуществляется работа.
-
-Параметры доступа к терминальному серверу:
-[horizontal]
-ip-адрес :: `195.19.33.62`
-имя пользователя :: `user00` .. `user99`
-пароль :: совпадает с именем пользователя
-
-Для доступа к терминальному серверу из Linux можно воспользоваться следующей командой:
-
-....
-$ rdesktop 195.19.33.62 -uuser15 -puser15 -g1366x716 -r disk:z=<путь> -k en-us
-....
-где вместо `<путь>` требуется указать путь к локальному каталогу, который будет
-экспортирован на сервер в качестве диска `Z:` на время сеанса удаленной работы.
-
-.Развертывание рабочего окружения на другом ПК
-Для развертывания рабочего окружения на любом ПК под управлением ОС Windows
-необходимо установить следующее ПО:
-
-. Intel Quartus. Установочный пакет доступен на сайте https://fpgasoftware.intel.com/?edition=lite&platform=windows после бесплатной регистрации.
-Потребуется версия не меньше 20.1. Для установки необходимо скачать и установить пакет Quartus Prime Lite Edition Software
-с вкладки Combined Files.
-. Компилятор, ассемблер, линкер и вспомогательные утилиты. Устанавливаются одним
-пакетом с помощью установщика, доступного по ссылке: https://sysprogs.com/getfile/40/risc-v-gcc7.7.1.exe
-. Bash, git и другие утилиты Unix. Устанавливаются одним
-пакетом с помощью установщика, доступного на сайте https://git-scm.com/download/win (подойдет любая версия).
-
-Установку можно проводить в любом порядке с параметрами по умолчанию.
-После установки необходимо перейти в каталог с установленным компилятором (он выбирался на шаге 2)
-и переименовать файл `bin\make` в `bin\gmake`.
-
 == Архитектура набора команд RV32I
 
 RISC-V является открытым современным набором команд, который может использоваться для
@@ -876,16 +837,11 @@ ID :: Такт, в котором происходит операция дисп
 ==== Задание №2
 В ходе выполнения данного задания необходимо выполнить следующие действия:
 
-. Открыть проект `riscv-lab/taiga/taiga.qpf` в среде Intel Quartus. При запуске
-Intel Quartus, если потребуется, выбрать опцию `Run the Quartus Prime software`.
-. Выполнить синтез проекта выбрав пункт меню Processing -> Start -> Start Analysis & Synthesis.
-. Запустить симуляцию в среде Modelsim. Для этого выбрать в меню Quartus пункт
-Tools -> Run Simulation Tool -> RTL Simulation.
+. Запустить симуляцию в среде Modelsim. Для этого найти в каталоге `taiga` файл `run.sh` (если лабораторная 
+работа выполняетсяв среде ОС Linux) или `run.bat` (для ОС Windows) и запустить его двойным щелчком мыши.
 +
-NOTE: Если при запуске симуляции возникнет сообщение об ошибке, вызванной тем,
-что путь к симулятору не указан, необходимо открыть окно настроек Tools -> Options.
-В левой части окна найти пункт EDA Tool Options. В текстовом поле напротив пункта
-`ModelSim-Altera` ввести путь к каталогу с установленным симулятором: `C:\intelFPGA_lite\20.1\modelsim_ase\win32aloem`.
+IMPORTANT: Обратите внимание, что в заданиях 2-4 (включительно) используется тестовая программа `test.s`, работа с 
+индивидуальной программой начнется только с задания 5. 
 
 . Запустить симуляцию, набрав в командной строке Modelsim команду `run 460us`.
 . Изучить список сигналов, приведенных в окне Wave.
@@ -1372,7 +1328,7 @@ D  :: Такт, в котором происходит операция деко
 W   :: Такт, в котором не происходит декодирования команды из-за загрузки блока декодирования;
 X   :: Такт, в котором происходит сброс команд, находящихся в очереди;
 DX   :: Такт, в котором декодирование команды происходит, но его результаты отбрасываются;
-DX   :: Такт, в котором выборка команды происходит, но его результаты отбрасываются.
+FX   :: Такт, в котором выборка команды происходит, но его результаты отбрасываются.
 
 ===== Пример выполнения команды условного перехода в случае правильного предсказания ветвления
 Изменим теперь тестовый пример так, чтобы цикл выполнился 3 раза. Для этого вместо команды
@@ -1435,7 +1391,7 @@ D  :: Такт, в котором происходит операция деко
 W   :: Такт, в котором не происходит декодирования команды из-за загрузки блока декодирования;
 X   :: Такт, в котором происходит сброс команд, находящихся в очереди;
 DX   :: Такт, в котором декодирование команды происходит, но его результаты отбрасываются;
-DX   :: Такт, в котором выборка команды происходит, но его результаты отбрасываются;
+FX   :: Такт, в котором выборка команды происходит, но его результаты отбрасываются;
 M1, M2, M3   :: Первый, второй и третий такты, в которых происходит выполнение команды доступа к памяти;
 AL   :: Такт, в котором происходит выполнение команды АЛУ;
 B    :: Такт, в котором происходит выполнение команды ветвления.
@@ -1451,12 +1407,10 @@ B    :: Такт, в котором происходит выполнение к
 В процесссе выполнения этого задания необходимо выполнить следующие
 действия:
 
-. Исправить 76-ю строку файла `taiga/examples/zedboard/taiga_wrapper.sv` так, чтобы там был
+. Исправить файл `taiga/run.sh` или `taiga/run.bat` так, чтобы там был
 указан путь к файлу `.hex`, соответствующему программе по индивидуальному варианту. Сохранить файл.
-. Перекомпилировать исправленный файл. Для этого в окне программы Modelsim найти
-вкладку `Library`, в этой вкладке найти модуль `work -> taiga_wrapper`. В контекстном меню
-модуля выбрать пункт Recompile.
-. Ввести в командой строке Modelsim команду `restart; run 460us` для перезапуска симуляции.
+. Закрыть Modelsim.
+. Запустить симуляция заново.
 . Получить временную диаграмму сигналов выполнения программы индивидуального варианта.
 . Сравнить значение регистра `x31` (сигнал `/tb/register_file[31]`) на момент
 окончания выполнения программы с тем, который был получен в Задании №1.
