Исправлены ошибки в заданиях.

--- a/main.adoc
+++ b/main.adoc
@@ -580,7 +580,7 @@ $ git clone https://gitlab.com/sibragimov/riscv-lab.git
 
 . Ознакомиться с теоретической частью, внимательно изучить примеры.
 . Перейти в подкаталог `src` командой `cd riscv-lab/src`.
-. Выполнить сборку, запустив команду `gmake`. Убедиться, что был создан файл `test.hex`,
+. Выполнить сборку, запустив команду `make`. Убедиться, что был создан файл `test.hex`,
 содержащий шестнадцатеричное представление программы, а в окне терминала отобразился
 дизассемблерный листинг. Сравнить дизассемблерный листинг с тем, который приведен в примере.
 . Создать новый файл, содержащий текст программы по индивидуальному варианту (см. <<variants>>). Поместить его
@@ -595,7 +595,7 @@ IMPORTANT: При выполнении данного пункта не изме
 содержаться в регистре `x31` в конце выполнения программы?
 . Изменить в `Makefile` строку `SRC=` так, чтобы ее содержимое соответствовало
 имени файла с текстом программы без расширения `.s`.
-. Выполнить компиляцию командой `gmake`. В процессе будет создан файл с расширением `.hex`,
+. Выполнить компиляцию командой `make`. В процессе будет создан файл с расширением `.hex`,
 хранящий содержимое памяти команд и данных, а в окне терминала отобразится дизассемблерный листинг,
 который *необходимо поместить в отчет вместе с исходным текстом*.
 
@@ -859,7 +859,7 @@ IMPORTANT: Обратите внимание, что в заданиях 2-4 (в
 |Вариант                        |10            |11            |12
 |13             |14             |15             |16            |17            |18
 
-|Адрес команды, номер итерации  |80000030, 1-я |80000034, 1-я |8000000с, 2-я
+|Адрес команды, номер итерации  |80000030, 1-я |80000034, 1-я |80000010, 2-я
 |80000010, 2-я  |80000014, 2-я  |80000018, 2-я  |8000001с, 2-я |80000020, 2-я |80000024, 2-я
 |Вариант                        |19            |20            |21
 |22             |23             |--             |--            |--            |--
@@ -2141,7 +2141,7 @@ _x:     .4byte 0x1
 ....
         .section .text
         .globl _start;
-        len = 9 #Размер массива
+        len = 8 #Размер массива
         enroll = 4 #Количество обрабатываемых элементов за одну итерацию
         elem_sz = 4 #Размер одного элемента массива
 
@@ -2185,7 +2185,7 @@ _x:     .4byte 0x1
 ....
         .section .text
         .globl _start;
-        len = 9 #Размер массива
+        len = 8 #Размер массива
         enroll = 4 #Количество обрабатываемых элементов за одну итерацию
         elem_sz = 4 #Размер одного элемента массива
 
